--- a/SchoolProject.Web/Views/Shared/_Layout.cshtml
+++ b/SchoolProject.Web/Views/Shared/_Layout.cshtml
@@ -61,6 +61,8 @@
     </div>
 </main>
 
+<partial name="Modals/_DeleteModal"/>
+
 <div class="b-example-divider d-none">Layout Footers</div>
 <partial name="_LayoutFooter"/>
 
