--- a/SchoolProject.Web/Views/Users/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Users/IndexCards.cshtml
@@ -1,11 +1,22 @@
-﻿@* @model IEnumerable<SchoolProject.Web.Data.Entities.Users.User> *@
-@using System.Reflection
+﻿@using System.Reflection
+
+@* @model IEnumerable<SchoolProject.Web.Data.Entities.Users.User> *@
 @model IEnumerable<SchoolProject.Web.Models.Users.UserWithRolesViewModel>
 
 @{
+    // ViewData["Title"] = "Index";
+    // ViewData["Title"] = "Owners List";
+    // ViewData["Title"] = @ViewContext.RouteData.Values["controller"] + " - " + @ViewContext.RouteData.Values["action"];
+    ViewData["Title"] = ViewContext.RouteData.Values["controller"] + " List";
+
     var actionName = ViewContext.RouteData.Values["action"]?.ToString();
     var controllerName = ViewContext.RouteData.Values["controller"]?.ToString();
     var assemblyName = Assembly.GetExecutingAssembly().GetName().Name;
+
+    // Isso obtém o nome da classe do modelo atual
+    // var modelName = Model.GetModelName(m => m);
+    var deleteClassName = Model.GetType().FullName;
+
     var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
 
@@ -36,7 +47,8 @@
                                 <div class="btn-group">
                                     <a asp-action="Edit" asp-route-id="@item.User.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
                                     <a asp-action="Details" asp-route-id="@item.User.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
-                                    <a asp-action="Delete" asp-route-id="@item.User.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
+                                    @* <a asp-action="Delete" asp-route-id="@item.User.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a> *@
+                                    <a asp-action="Delete" asp-route-id="@item.User.Id" class="btn btn-outline-danger" data-bs-target="#deleteButton" data-bs-toggle="modal" data-del-action="Delete" data-del-class="@deleteClassName" data-del-controller="@controllerName" data-del-item-id="@item.User.Id" data-del-item-name="@item.User.FullName" id="btnDelete" type="button"><span class="fa-regular fa-trash-can"></span> Delete </a>
                                 </div>
                                 @* <small class="text-body-secondary px-2"> *@
                                 @*     @Html.DisplayNameFor(modelItem => item.User.Email)<br/> *@
