--- a/SchoolProject.Web/Views/Shared/_LayoutScripts.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutScripts.cshtml
@@ -7,5 +7,7 @@
 <script asp-append-version="true" charset="utf-8" src="~/js/datePickerInitialization.js" type="text/javascript"></script>
 <script asp-append-version="true" charset="utf-8" src="~/js/imagePreview.js" type="text/javascript"></script>
 
+<script asp-append-version="true" charset="utf-8" src="~/js/deleteModal.js" type="text/javascript"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/delete-modal-handler.js" type="text/javascript"></script>
 
 <script asp-append-version="true" charset="utf-8" src="~/js/site.js" type="text/javascript"></script>
