--- a/SchoolProject.Web/Views/Students/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Students/IndexCards.cshtml
@@ -2,9 +2,18 @@
 @model IEnumerable<SchoolProject.Web.Data.Entities.Students.Student>
 
 @{
+    // ViewData["Title"] = "Index";
+    // ViewData["Title"] = "Owners List";
+    // ViewData["Title"] = @ViewContext.RouteData.Values["controller"] + " - " + @ViewContext.RouteData.Values["action"];
+    ViewData["Title"] = ViewContext.RouteData.Values["controller"] + " List";
+
     var actionName = ViewContext.RouteData.Values["action"]?.ToString();
     var controllerName = ViewContext.RouteData.Values["controller"]?.ToString();
     var assemblyName = Assembly.GetExecutingAssembly().GetName().Name;
+
+    // Isso obtém o nome da classe do modelo atual
+    // var modelName = Model.GetModelName(m => m);
+    var deleteClassName = Model.GetType().FullName;
 
     var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
@@ -35,7 +44,7 @@
                                 <div class="btn-group">
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
-                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger" data-bs-target="#deleteButton" data-bs-toggle="modal" data-del-action="Delete" data-del-class="@deleteClassName" data-del-controller="@controllerName" data-del-item-id="@item.Id" data-del-item-name="@item.FullName" id="btnDelete" type="button"><span class="fa-regular fa-trash-can"></span> Delete </a>
                                 </div>
                                 @* <small class="text-body-secondary">@Html.DisplayFor(modelItem => item.Country.Name)</small> *@
                                 @* <small class="text-body-secondary">@Html.DisplayFor(modelItem => item.Nationality.Name)</small> *@
