--- a/SchoolProject.Web/Views/Account/Register.cshtml
+++ b/SchoolProject.Web/Views/Account/Register.cshtml
@@ -13,11 +13,13 @@
 @* <div class="container-fluid"> *@
 <div class="container-md">
     <div class="row">
-        <partial name="_DisplayImages"/>
-
+        
         <div class="col">
-            <div class="row">
-                <form method="post" enctype="multipart/form-data">
+            <partial name="_DisplayImages" />
+        </div>
+
+        <div class="col">           
+            <form method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly"></div>
 
                     <div class="form-group">
@@ -94,12 +96,14 @@
             </div>
         </div>
     </div>
-</div>
+
 
 
 <script src="~/js/citiesAndCountriesList.js"></script>
 @* <script src="~/js/citiesWithNationalityAndCountries.js"></script> *@
 @* <script src="~/js/citiesWithNationalityAndCountriesList.js"></script> *@
+<script src="~/js/gendersList.js"></script>
+<script src="~/js/rolesList.js"></script>
 
 
 @section Scripts {
