changes to the lauout and 2fa ativation

--- a/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/SchoolProject.Web/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -64,4 +64,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial"/>
+
+    <script type="text/javascript" src="~/lib/qrcodejs/qrcode.min.js"></script>
+    <script type="text/javascript" src="~/js/qr.js"></script>
 }
