--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarLoginDarkModePanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarLoginDarkModePanel.cshtml
@@ -14,6 +14,9 @@
 
 <div class="d-flex ms-auto">
 
+    <div class="b-example-divider d-none">Login develop by us for the system - section</div>
+    
+    @*
     <span class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
         <div class="vr d-none d-lg-flex h-100 mx-lg-2 "></div>
         <hr class="d-lg-none my-2 ">
@@ -61,8 +64,9 @@
             </a>
         }
     </div>
+    *@
 
-
+    <div class="b-example-divider d-none">Login Microsoft Identity UI section</div>
     <span class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
         <div class="vr d-none d-lg-flex h-100 mx-lg-2 "></div>
         <hr class="d-lg-none my-2 ">
@@ -71,9 +75,15 @@
     <partial name="_LoginPartial"/>
 
 
+    <div class="b-example-divider d-none">Dropdown Language panel section</div>
     @* <partial name="_LayoutNavBarLanguagePanel"/> *@
 
+
+    <div class="b-example-divider d-none">Dropdown Theme Panel section</div>
     @* <partial name="_LayoutNavBarThemePanel"/> *@
+
+
+    <div class="b-example-divider d-none">Dark mode switch section</div>
 
     <div class="b-example-divider d-none">dark mode switch panel section</div>
     <span class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
