--- a/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
@@ -18,15 +18,15 @@
 
 
 <div class="b-example-divider d-none">Layout Footer simple</div>
-<partial name="LayoutFooter/_LayoutFooterSimple"/>
+@* <partial name="LayoutFooter/_LayoutFooterSimple"/> *@
 
 
 <div class="b-example-divider d-none">Layout Footer Complete</div>
-<partial name="LayoutFooter/_LayoutFooterComplete"/>
+@* <partial name="LayoutFooter/_LayoutFooterComplete"/> *@
 
 
 <div class="b-example-divider d-none">Layout Footer with Newsletter</div>
-<partial name="LayoutFooter/_LayoutFooterNewsletter"/>
+@* <partial name="LayoutFooter/_LayoutFooterNewsletter"/> *@
 
 
 <div class="b-example-divider d-none">Layout Footer javascript 0</div>
