--- a/SchoolProject.Web/Views/Account/Register.cshtml
+++ b/SchoolProject.Web/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model SchoolProject.Web.Models.Users.RegisterNewUserViewModel
+﻿@using SchoolProject.Web.Models.Account;
+@model    SchoolProject.Web.Models.Account.RegisterNewUserViewModel
 
 @{
     ViewData["Title"] = "Register";
