--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
@@ -244,7 +244,7 @@
         <div class="b-example-divider d-none">dark mode switch panel section</div>
         <span class="nav-item py-2 py-lg-1 col-12 col-lg-auto dark-mode-switch-panel-section">
             <div class="vr d-none d-lg-flex h-100 mx-lg-2 "></div>
-            <hr class="d-lg-none my-2 ">
+            <hr class="d-lg-none my-2 "/>
         </span>
 
         <div class="form-check form-switch me-2 dark-mode-switch-panel-section">
