account register and reset pass

--- a/SchoolProject.Web/Views/Account/Login.cshtml
+++ b/SchoolProject.Web/Views/Account/Login.cshtml
@@ -60,6 +60,8 @@
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-success"/>
                 <a asp-action="Register" class="btn btn-primary">Register New AppUser</a>
+                <a asp-action="ForgotPassword" class="btn btn-secondary">Forgot Password</a>
+                <a asp-action="ResetPassword" class="btn btn-warning">Reset Password</a>
             </div>
         </form>
 
