--- a/SchoolProject.Web/Views/Disciplines/_DisciplinesCE.cshtml
+++ b/SchoolProject.Web/Views/Disciplines/_DisciplinesCE.cshtml
@@ -31,7 +31,7 @@
 </div>
 <div class="form-group">
     <label asp-for="CreditPoints" class="control-label"></label>
-    <input asp-for="CreditPoints" class="form-control"/>
+    <input asp-for="CreditPoints" class="form-control"  type="number"/>
     <span asp-validation-for="CreditPoints" class="text-danger"></span>
 </div>
 <div class="form-group">
@@ -47,12 +47,12 @@
 
 <div class="form-group">
     <label asp-for="CreatedAt" class="control-label"></label>
-    <input asp-for="CreatedAt" class="form-control"/>
+    <input asp-for="CreatedAt" class="form-control" disabled/>
     <span asp-validation-for="CreatedAt" class="text-danger"></span>
 </div>
 
 <div class="form-group">
     <label asp-for="UpdatedAt" class="control-label"></label>
-    <input asp-for="UpdatedAt" class="form-control"/>
+    <input asp-for="UpdatedAt" class="form-control" disabled/>
     <span asp-validation-for="UpdatedAt" class="text-danger"></span>
 </div>
