--- a/SchoolProject.Web/Views/Genders/Edit.cshtml
+++ b/SchoolProject.Web/Views/Genders/Edit.cshtml
@@ -39,7 +39,8 @@
 
             <form asp-action="Edit" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Id"/>
+                <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="ProfilePhotoId" />
 
                 <partial name="_GendersCE" for="@Model"/>
                 <br/>
